fixes scaling on home page, window size too small -> hide popup

--- a/source/assets/styles/game.css
+++ b/source/assets/styles/game.css
@@ -400,4 +400,7 @@ ol {
   .buttons {
     display: none;
   }
+  .content {
+    display: none;
+  }
 }
